--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -133,6 +133,12 @@
       <version>3.0.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.13</version>
+    </dependency>
+
   </dependencies>
 
   <build>
