Technology update to Spring Boot 1.3

--- a/Archivist/src/test/resources/application.properties
+++ b/Archivist/src/test/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.com.googlecore.flyway=DEBUG
 
 # Archivist Settings
 #
-archivist.datasource.primary.url=jdbc:h2:./db/archivist;DB_CLOSE_DELAY=-1;MODE=Oracle;
+archivist.datasource.primary.url=jdbc:h2:./db/archivist;DB_CLOSE_DELAY=-1
 archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
