Folders: moved folders into SQL DB.
- Unique IDs changed from strings to ints
- Addd endpoint to get folder by path
- Populating new fields on folders
- Added concrete root folder with the name of "/"
- Added /users folder which has 1 folder per user.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -95,7 +95,7 @@
           }
         },
         "folders": {
-          "type": "string",
+          "type": "integer",
           "index": "not_analyzed"
         },
         "selectedRooms": {
@@ -168,28 +168,6 @@
           }
         }
       ]
-    },
-    "folders": {
-      "properties": {
-        "parentId": {
-          "index": "not_analyzed",
-          "type": "string"
-        },
-        "createdUser": {
-          "type": "integer"
-        },
-        "modifiedUser": {
-          "type": "integer"
-        },
-        "name": {
-          "index": "not_analyzed",
-          "type": "string"
-        },
-        "query": {
-          "index": "not_analyzed",
-          "type": "object"
-        }
-      }
     }
   }
 }
