Filter out nulls on rest endpoints.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8066
 flyway.check-location=true
 
 logging.level.com.googlecore.flyway=DEBUG
-
+spring.jackson.serialization-inclusion:non_null
 
 #security.basic.enabled=false
 
