--- a/Archivist/src/test/resources/application.properties
+++ b/Archivist/src/test/resources/application.properties
@@ -8,6 +8,7 @@ server.port=9066
 flyway.check-location=true
 
 logging.level.com.googlecore.flyway=DEBUG
+spring.jackson.serialization-inclusion:non_null
 
 #security.basic.enabled=false
 
