--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -139,6 +139,18 @@
       <version>3.13</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.twelvemonkeys.imageio</groupId>
+      <artifactId>imageio-tiff</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.twelvemonkeys.imageio</groupId>
+      <artifactId>imageio-psd</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
