--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -32,6 +32,7 @@ archivist.export.autoStart=true
 archivist.export.basePath=exports
 archivist.export.maxAssetCount=1024
 archivist.export.maxTotalFileSize=500M
+archivist.export.expireTime=1w
 
 archivist.snapshot.basePath=snapshots
 archivist.snapshot.repoName=backups
