--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <slf4jVersion>1.7.11</slf4jVersion>
+        <java.version>1.8</java.version>
         <com.zorroa.appDir>"/Library/Application Support/Zorroa"</com.zorroa.appDir>
         <com.zorroa.extensionDir>${com.zorroa.appDir}/java/extensions</com.zorroa.extensionDir>
     </properties>
@@ -22,32 +22,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.zorroa</groupId>
-            <artifactId>archivist-sdk</artifactId>
-            <version>0.15.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>18.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.opencv</groupId>
             <artifactId>opencv</artifactId>
             <version>2.4.12</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4jVersion}</version>
         </dependency>
 
         <dependency>
@@ -56,22 +33,54 @@
             <version>1.1</version>
         </dependency>
 
+        <!-- PROVIDED -->
+        <dependency>
+            <groupId>com.zorroa</groupId>
+            <artifactId>archivist-sdk</artifactId>
+            <version>0.15.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.4.0</version>
+            <version>2.6.4</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.4.0</version>
+            <version>2.6.4</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- TEST -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.5.3</version>
+            <version>2.6.4</version>
             <scope>test</scope>
         </dependency>
 
@@ -163,7 +172,7 @@
                             <commandlineArgs>install:install-file -Dfile=lib/face/opencv-2412.jar -DgroupId=org.opencv -DartifactId=opencv -Dversion=2.4.12 -Dpackaging=jar</commandlineArgs>
                         </configuration>
                     </execution>
-                    
+
                     <execution>
                         <id>Javalib CaffeClassifier</id>
                         <phase>compile</phase>
