--- a/ArchivistSDK/pom.xml
+++ b/ArchivistSDK/pom.xml
@@ -42,6 +42,7 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
