--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -99,6 +99,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-parsers</artifactId>
+      <version>1.11</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.drewnoakes</groupId>
       <artifactId>metadata-extractor</artifactId>
       <version>2.8.1</version>
@@ -149,6 +155,12 @@
       <groupId>com.twelvemonkeys.imageio</groupId>
       <artifactId>imageio-psd</artifactId>
       <version>3.2.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>javacv</artifactId>
+      <version>1.1</version>
     </dependency>
 
   </dependencies>
