--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -14,6 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <com.zorroa.appDir>"/Library/Application Support/Zorroa"</com.zorroa.appDir>
         <com.zorroa.extensionDir>${com.zorroa.appDir}/java/extensions</com.zorroa.extensionDir>
