SSL: converted server to use SSL.
The key is packged with server.  Tomcat didnt' support this so I switched the undertow which is
a JBOSS product, actually faster than Tomcat as well.  The location of the key is changable
via config.

--- a/Archivist/src/test/resources/application.properties
+++ b/Archivist/src/test/resources/application.properties
@@ -6,6 +6,12 @@
 
 server.port=9066
 server.session.timeout=600
+
+server.ssl.key-store = classpath:keystore.p12
+server.ssl.key-store-password = 69pontiacgto
+server.ssl.keyStoreType = PKCS12
+server.ssl.keyAlias = undertow
+
 flyway.check-location=true
 
 logging.level.com.googlecore.flyway=DEBUG
