--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -9,7 +9,7 @@
   <packaging>jar</packaging>
 
   <name>zorroa-archivist</name>
-  <description>Demo project for Spring Boot</description>
+  <description>Zorroa Platform Application Server</description>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -48,6 +48,16 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-undertow</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
