--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -5,6 +5,12 @@
 
 server.port=8066
 server.session.timeout=3000
+
+server.ssl.key-store = classpath:keystore.p12
+server.ssl.key-store-password = 69pontiacgto
+server.ssl.keyStoreType = PKCS12
+server.ssl.keyAlias = undertow
+
 flyway.check-location=true
 
 logging.level.com.googlecore.flyway=DEBUG
