--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -3,6 +3,11 @@
 # Spring and Spring Boot Settings
 #
 
+info.build.artifact=@project.artifactId@
+info.build.name=@project.name@
+info.build.description=@project.description@
+info.build.version=@project.version@
+
 server.port=8066
 server.session.timeout=3000
 
