--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -74,9 +74,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.googlecode.flyway</groupId>
+      <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
-      <version>2.3.1</version>
+
     </dependency>
 
     <dependency>
