/info URL, doesn't need both artifact and and project name.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -2,9 +2,7 @@
 #
 # Spring and Spring Boot Settings
 #
-
-info.build.artifact=@project.artifactId@
-info.build.name=@project.name@
+info.build.project=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
 
