--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -34,6 +34,12 @@
             <version>1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.1</version>
+        </dependency>
+
         <!-- PROVIDED -->
         <dependency>
             <groupId>com.zorroa</groupId>
