--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -96,11 +96,15 @@
     <build>
 
         <plugins>
-
-            <!--
-            To rename the JAR the maven-jar-plugin is required until
-            spring-boot 1.3 is released.
-            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <version>2.6</version>
