--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -17,6 +17,12 @@ server.ssl.keyAlias = undertow
 flyway.check-location=true
 
 logging.level.com.googlecore.flyway=DEBUG
+
+#
+# Turn off logging from undertow, we'll log exceptions on our own.
+#
+logging.level.io.undertow.request=OFF
+
 spring.jackson.serialization-inclusion:non_null
 
 #security.basic.enabled=false
