Asset updating: refactored asset updating to allow setting rating and permissions.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -139,6 +139,10 @@
             "export": {
               "type": "integer",
               "index": "not_analyzed"
+            },
+            "write": {
+              "type": "integer",
+              "index": "not_analyzed"
             }
           }
         },
