Added an HMac security handler, mainly as a quick test to see how to do it, but is also a good system for API users.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -34,6 +34,8 @@ archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
+archivist.security.hmacStore=/tmp
+
 archivist.events.port=8087
 
 archivist.index.alias=archivist
