--- a/Archivist/.travis.yml
+++ b/Archivist/.travis.yml
@@ -6,6 +6,7 @@ jdk:
 install:
   - rm -rf db proxies exports unittest
   - ./travis/travis-install-archivist-sdk.sh
+  - ./travis/travis-install-image-drivers.sh
 
 notifications:
   slack: zorroa:U0489fQGuSPls5EZZfSUoGsL
