--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -155,59 +155,21 @@
     </dependency>
 
     <dependency>
-      <groupId>com.twelvemonkeys.common</groupId>
-      <artifactId>common-image</artifactId>
-      <version>3.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/common-image-3.3-SNAPSHOT.jar</systemPath>
-    </dependency>
-
-    <dependency>
-      <groupId>com.twelvemonkeys.common</groupId>
-      <artifactId>common-io</artifactId>
-      <version>3.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/common-io-3.3-SNAPSHOT.jar</systemPath>
-    </dependency>
-
-    <dependency>
-      <groupId>com.twelvemonkeys.common</groupId>
-      <artifactId>common-lang</artifactId>
-      <version>3.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/common-lang-3.3-SNAPSHOT.jar</systemPath>
-    </dependency>
-
-    <dependency>
-      <groupId>com.twelvemonkeys.imageio</groupId>
-      <artifactId>imageio-core</artifactId>
-      <version>3.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/imageio-core-3.3-SNAPSHOT.jar</systemPath>
-    </dependency>
-
-    <dependency>
-      <groupId>com.twelvemonkeys.imageio</groupId>
-      <artifactId>imageio-metadata</artifactId>
-      <version>3.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/imageio-metadata-3.3-SNAPSHOT.jar</systemPath>
-    </dependency>
-
-    <dependency>
       <groupId>com.twelvemonkeys.imageio</groupId>
       <artifactId>imageio-tiff</artifactId>
       <version>3.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/imageio-tiff-3.3-SNAPSHOT.jar</systemPath>
+    </dependency>
+
+    <dependency>
+      <groupId>com.twelvemonkeys.imageio</groupId>
+      <artifactId>imageio-jpeg</artifactId>
+      <version>3.3-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>com.twelvemonkeys.imageio</groupId>
       <artifactId>imageio-psd</artifactId>
       <version>3.3-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/imageio-psd-3.3-SNAPSHOT.jar</systemPath>
     </dependency>
 
     <dependency>
