--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -34,13 +34,14 @@ archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
+archivist.storage.basePath=storage
+
 archivist.security.hmacStore=/tmp
 
 archivist.events.port=8087
 
 archivist.index.alias=archivist
 
-archivist.proxies.basePath=proxies
 archivist.proxies.format=jpg
 
 archivist.ingest.ingestWorkers=1
