ObjectFileSystem: make the base dir the current working dir.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -34,7 +34,7 @@ archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
-archivist.storage.basePath=storage
+archivist.storage.basePath=
 
 archivist.security.hmacStore=/tmp
 
