Added elastic migration system which can move data from one index to another at server startup time.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -1,5 +1,9 @@
 {
-  "version": 1,
+  "migration": {
+    "version": 1,
+    "reindex": false,
+    "reingest": false
+  },
   "settings": {
     "index": {
       "query": {
