Migrations: follow up to migration system to support aggregating changes from multiple elastic mapping version into a single re-index/re-import.

--- a/Archivist/src/main/resources/db/mappings/V1__mapping.json
+++ b/Archivist/src/main/resources/db/mappings/V1__mapping.json
@@ -1,8 +1,5 @@
 {
-  "migration": {
-    "reindex": true,
-    "reingest": false
-  },
+  "version": 1,
   "settings": {
     "index": {
       "query": {
