Filesystem: moved the ObjectFileSystem into the SDK.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -34,7 +34,8 @@ archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
-archivist.storage.basePath=
+archivist.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
+archivist.filesystem.location =
 
 archivist.security.hmacStore=/tmp
 
