--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.zorroa</groupId>
   <artifactId>archivist</artifactId>
   <version>0.17.0</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>zorroa-archivist</name>
   <description>Zorroa Platform Application Server</description>
@@ -14,12 +14,12 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-parent</artifactId>
-     <version>1.3.1.RELEASE</version>
+     <version>1.3.2.RELEASE</version>
   </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <start-class>com.zorroa.archivist.ArchivistApplication</start-class>
+    <start-class>com.zorroa.archivist.Application</start-class>
     <java.version>1.8</java.version>
     <com.zorroa.appDir>"/Library/Application Support/Zorroa"</com.zorroa.appDir>
     <com.zorroa.javaDir>${com.zorroa.appDir}/java</com.zorroa.javaDir>
@@ -47,16 +47,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-tomcat</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-undertow</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -75,7 +65,6 @@
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
-
     </dependency>
 
     <dependency>
@@ -84,9 +73,21 @@
     </dependency>
 
     <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>18.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
     </dependency>
 
     <dependency>
@@ -108,18 +109,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.tika</groupId>
-      <artifactId>tika-parsers</artifactId>
-      <version>1.11</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.drewnoakes</groupId>
-      <artifactId>metadata-extractor</artifactId>
-      <version>2.8.1</version>
-    </dependency>
-
-    <dependency>
       <groupId>com.fasterxml.uuid</groupId>
       <artifactId>java-uuid-generator</artifactId>
       <version>3.1.4</version>
@@ -134,48 +123,6 @@
       <groupId>io.netty</groupId>
     <artifactId>netty-all</artifactId>
       <version>4.0.28.Final</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.4</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>3.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>3.13</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.twelvemonkeys.imageio</groupId>
-      <artifactId>imageio-tiff</artifactId>
-      <version>3.3-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.twelvemonkeys.imageio</groupId>
-      <artifactId>imageio-jpeg</artifactId>
-      <version>3.3-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.twelvemonkeys.imageio</groupId>
-      <artifactId>imageio-psd</artifactId>
-      <version>3.3-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.bytedeco</groupId>
-      <artifactId>javacv</artifactId>
-      <version>1.1</version>
     </dependency>
 
   </dependencies>
