Added the basics of the ingest pipeline processor

--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -4,5 +4,6 @@
 analyst.executor.threads = -1
 analyst.master.host = 127.0.0.1:8066
 analyst.index.alias=archivist
+analyst.index.data=true
 
 server.port = 9091
