--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -64,6 +64,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.zorroa</groupId>
+            <artifactId>java-common</artifactId>
+            <version>0.17</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
