SSL configuration changed, new cert and configuration.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -9,10 +9,16 @@ info.build.version=@project.version@
 server.port=8066
 server.session.timeout=3000
 
+server.ssl.enabled = true
 server.ssl.key-store = classpath:keystore.p12
-server.ssl.key-store-password = 69pontiacgto
-server.ssl.keyStoreType = PKCS12
-server.ssl.keyAlias = undertow
+server.ssl.key-store-password = zorroa
+server.ssl.key-password = zorroa
+server.ssl.key-store-type = PKCS12
+server.ssl.key-alias = zorroa
+server.ssl.trust-store = classpath:truststore.p12
+server.ssl.trust-store-password = zorroa
+
+server.ssl.trust-store-type = PKCS12
 
 flyway.check-location=true
 
@@ -41,7 +47,7 @@ archivist.security.hmacStore=/tmp
 
 archivist.events.port=8087
 
-archivist.index.alias=archivist
+archivist.index.alias=archivistls
 
 archivist.proxies.format=jpg
 
