--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -6,4 +6,13 @@ analyst.master.host = 127.0.0.1:8066
 analyst.index.alias=archivist
 analyst.index.data=true
 
-server.port = 9091
+server.port = 8099
+
+server.ssl.enabled = true
+server.ssl.key-store = classpath:keystore.p12
+server.ssl.key-store-password = zorroa
+server.ssl.key-password = zorroa
+server.ssl.key-store-type = PKCS12
+server.ssl.key-alias = zorroa
+server.ssl.trust-store = classpath:truststore.p12
+server.ssl.trust-store-password = zorroa
