--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -13,6 +13,6 @@ server.ssl.key-store = classpath:keystore.p12
 server.ssl.key-store-password = zorroa
 server.ssl.key-password = zorroa
 server.ssl.key-store-type = PKCS12
-server.ssl.key-alias = zorroa
+server.ssl.key-alias = ingestor
 server.ssl.trust-store = classpath:truststore.p12
 server.ssl.trust-store-password = zorroa
