Added archivist properties class with some props fixes.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -41,13 +41,13 @@ archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
 archivist.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
-archivist.filesystem.location =
+archivist.filesystem.location = storage
 
 archivist.security.hmacStore=/tmp
 
 archivist.events.port=8087
 
-archivist.index.alias=archivistls
+archivist.index.alias=archivist
 
 archivist.proxies.format=jpg
 
