--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -6,6 +6,9 @@ analyst.master.host = 127.0.0.1:8066
 analyst.index.alias=archivist
 analyst.index.data=true
 
+analyst.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
+analyst.filesystem.location = storage
+
 server.port = 8099
 
 server.ssl.enabled = true
