--- a/ArchivistSDK/pom.xml
+++ b/ArchivistSDK/pom.xml
@@ -63,6 +63,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 
