--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 # Number of threads to use for asset executors
 analyst.executor.threads = -1
-analyst.master.host = 127.0.0.1:8066
+analyst.master.host = https://127.0.0.1:8066
 analyst.index.alias=archivist
 analyst.index.data=true
 
