--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -175,7 +175,7 @@
             </goals>
             <configuration>
               <executable>/bin/rm</executable>
-              <commandlineArgs>-rf proxies exports unittest db/archivist.mv.db</commandlineArgs>
+              <commandlineArgs>-rf exports unittest</commandlineArgs>
             </configuration>
           </execution>
 
