--- a/Archivist/src/test/resources/test.properties
+++ b/Archivist/src/test/resources/test.properties
@@ -1,3 +1,9 @@
 
 archivist.export.maxAssetCount=1
 
+#
+# Override the location of the unittest DB so it doesn't pick up data
+# we add from running the server locally.
+#
+archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
+
