Handle movement of elastic stuff into common lib.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -33,6 +33,9 @@ spring.jackson.serialization-inclusion:non_null
 
 #security.basic.enabled=false
 
+# Common Archivist/Analyst Settings.
+zorroa.common.index.alias=archivist
+
 # Archivist Settings
 #
 archivist.datasource.primary.url=jdbc:h2:./db/archivist;DB_CLOSE_DELAY=-1;
@@ -46,8 +49,6 @@ archivist.filesystem.location = storage
 archivist.security.hmacStore=/tmp
 
 archivist.events.port=8087
-
-archivist.index.alias=archivist
 
 archivist.proxies.format=jpg
 
