Handle elastic stuff being moved to common lib.

--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -3,14 +3,15 @@
 # Number of threads to use for asset executors
 analyst.executor.threads = -1
 analyst.master.host = https://127.0.0.1:8066
-analyst.index.alias=archivist
+
+zorroa.common.index.alias=archivist
+
 analyst.index.data=true
 
 analyst.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
 analyst.filesystem.location = storage
 
 server.port = 8099
-
 server.ssl.enabled = true
 server.ssl.key-store = classpath:keystore.p12
 server.ssl.key-store-password = zorroa
@@ -19,3 +20,4 @@ server.ssl.key-store-type = PKCS12
 server.ssl.key-alias = ingestor
 server.ssl.trust-store = classpath:truststore.p12
 server.ssl.trust-store-password = zorroa
+
