Set the default number of asset workers to the server default if a value is not set on the ingest.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -52,7 +52,7 @@ archivist.events.port=8087
 
 archivist.proxies.format=jpg
 
-archivist.ingest.ingestWorkers=1
+archivist.ingest.defaultAssetWorkers=2
 
 archivist.export.autoStart=true
 archivist.export.basePath=exports
