--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -52,6 +52,7 @@ archivist.events.port=8087
 
 archivist.proxies.format=jpg
 
+archivist.ingest.ingestWorkers=2
 archivist.ingest.defaultAssetWorkers=2
 
 archivist.export.autoStart=true
