--- a/ArchivistCommon/pom.xml
+++ b/ArchivistCommon/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zorroa</groupId>
-    <artifactId>java-common</artifactId>
+    <artifactId>archivist-common</artifactId>
     <version>0.17</version>
     <build>
         <plugins>
