--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -33,7 +33,7 @@
 
     <dependency>
       <groupId>com.zorroa</groupId>
-      <artifactId>java-common</artifactId>
+      <artifactId>archivist-common</artifactId>
       <version>0.17</version>
     </dependency>
 
@@ -164,7 +164,7 @@
             </goals>
             <configuration>
               <executable>/bin/rm</executable>
-              <commandlineArgs>-rf exports unittest</commandlineArgs>
+              <commandlineArgs>-rf data db/archivist.mv.db exports unittest</commandlineArgs>
             </configuration>
           </execution>
 
