Tests: put unit tests on separate ports.
Ensures unit tests don't conflict with locally running servers.

--- a/Archivist/src/test/resources/test.properties
+++ b/Archivist/src/test/resources/test.properties
@@ -7,3 +7,8 @@ archivist.export.maxAssetCount=1
 #
 archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
 
+#
+# Run the the web server and event server on different port.
+#
+server.port=7066
+archivist.events.port=7087
