Filesystem: fixed file system init.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -43,8 +43,8 @@ archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
-archivist.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
-archivist.filesystem.location = storage
+zorroa.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
+zorroa.filesystem.root = storage
 
 archivist.security.hmacStore=/tmp
 
