--- a/Archivist/src/test/resources/test.properties
+++ b/Archivist/src/test/resources/test.properties
@@ -1,6 +1,8 @@
 
 archivist.export.maxAssetCount=1
 
+archivist.path.index=unittest/index
+
 #
 # Override the location of the unittest DB so it doesn't pick up data
 # we add from running the server locally.
