--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -164,7 +164,7 @@
             </goals>
             <configuration>
               <executable>/bin/rm</executable>
-              <commandlineArgs>-rf data db/archivist.mv.db exports unittest</commandlineArgs>
+              <commandlineArgs>-rf index db/archivist.mv.db exports unittest</commandlineArgs>
             </configuration>
           </execution>
 
