--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -38,13 +38,17 @@ zorroa.common.index.alias=archivist
 
 # Archivist Settings
 #
-archivist.datasource.primary.url=jdbc:h2:./db/archivist;DB_CLOSE_DELAY=-1;
+archivist.path.home=.
+archivist.path.db=${archivist.path.home}/db/archivist
+archivist.path.index=${archivist.path.home}/index
+
+archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1;
 archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
 zorroa.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
-zorroa.filesystem.root = storage
+zorroa.filesystem.root = ${archivist.path.home}/storage
 
 archivist.security.hmacStore=/tmp
 
