Remove the /root/.ssh folder which has a temp private key for docker

--- a/Analyst/docker/Dockerfile
+++ b/Analyst/docker/Dockerfile
@@ -46,4 +46,5 @@ RUN rm -rf /tmp/ArchivistCommon
 RUN rm -rf /tmp/Analyst
 RUN rm -rf /tmp/apache-maven*
 RUN rm -rf /root/.m2
+RUN rm -rf /root/.ssh
 
