Register: limit the interfaces that the server can bind to, so we don't pick up virtual box, localhost, docker, etc.

--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -18,6 +18,7 @@ analyst.path.index=${analyst.path.home}/index
 analyst.path.models=${analyst.path.home}/models
 
 server.port = 8099
+server.devices=eth0,eth1,wlan0,en0,en1
 server.ssl.enabled = true
 server.ssl.key-store = classpath:keystore.p12
 server.ssl.key-store-password = zorroa
