Single-threaded by default for demos

--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -3,8 +3,9 @@ info.build.project=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
 
-# Number of threads to use for asset executors
-analyst.executor.threads = -1
+# Number of threads to use for asset executors, or -1 for #processors
+# FIXME: Default to one to avoid JavaCPP multithreading crashes in OpenCV
+analyst.executor.threads = 1
 analyst.master.host = https://127.0.0.1:8066
 
 zorroa.common.index.alias=archivist
