Make sure mvn clean removes the unittest dir.

--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -251,7 +251,7 @@
                         </goals>
                         <configuration>
                             <executable>/bin/rm</executable>
-                            <commandlineArgs>-rf index storage</commandlineArgs>
+                            <commandlineArgs>-rf index storage unittest</commandlineArgs>
                         </configuration>
                     </execution>
 
