ObjectFileSystem changes: handle chnage to SDK on how object filesystems are used.

--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -9,8 +9,8 @@ analyst.master.host = https://127.0.0.1:8066
 
 zorroa.common.index.alias=archivist
 
-zorroa.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
-zorroa.filesystem.root = ${analyst.path.home}/storage
+analyst.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
+analyst.filesystem.root = ${analyst.path.home}/storage
 
 analyst.index.data=true
 analyst.path.home=.
