Config: - analyst defaults to announcing 1/2 the number of available CPUs - local server mode defaults to 1 CPU

--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -3,8 +3,10 @@ info.build.project=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
 
-# Number of threads to use for asset executors, or -1 for #processors
-analyst.executor.threads = 2
+# Number of threads to use for asset executors.
+# 0 for all CPUs, both physical and logical
+# -1 for 1/2 the number of available CPUS
+analyst.executor.threads = -1
 analyst.master.host = https://127.0.0.1:8066
 
 zorroa.common.index.alias=archivist
