Configuration: - default number of threads per ingest set to 2 - local server default number of ingests and threads per ingests set to 1
Some properly renaming and comments.

Fixes a bug where the # of threads was always defaulting to the max.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -54,8 +54,20 @@ archivist.events.ssl=false
 
 archivist.proxies.format=jpg
 
-archivist.ingest.ingestWorkers=2
-archivist.ingest.defaultAssetWorkers=2
+#
+# The maximum number of ingests that can be running simultaneously.
+#
+archivist.ingest.maxRunningIngests=2
+
+#
+# The default number of threads an single ingest will use if not specified
+# on an the ingest
+#
+archivist.ingest.defaultWorkerThreads=2
+
+#
+# The number of paths sent to an analyst to process at one time.
+#
 archivist.ingest.batchSize=5
 
 archivist.export.autoStart=true
