Add more detailed /health endpoint.

--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -18,6 +18,9 @@ server.ssl.key-alias = zorroa
 server.ssl.trust-store = classpath:truststore.p12
 server.ssl.trust-store-password = zorroa
 
+management.security.enabled = false
+endpoints.health.sensitive = false
+
 server.ssl.trust-store-type = PKCS12
 
 flyway.check-location=true
