Added simple shotgun crawler. Currently its hard coded to crawl shots but will soon be extended to do other entities.

--- a/ArchivistSDK/pom.xml
+++ b/ArchivistSDK/pom.xml
@@ -50,6 +50,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.zorroa.shotgun</groupId>
+            <artifactId>shotgun-client</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
